--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-3.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-3.json5
@@ -9,9 +9,11 @@
       "fysiskeArbeidssteder": [
         {
           "adresse": {
+            "tilleggsnavn": null,
             "gatenavn": "Adresseveien 123",
-            "husnummer": "123",
+            "husnummerEtasjeLeilighet": "123",
             "region": "Brandenburger",
+            "postboks": null,
             "postnummer": "1234",
             "poststed": "Poststedet",
             "landkode": "DE",
@@ -39,9 +41,11 @@
       "intensjonOmRetur": true,
       "antallMaanederINorge": null,
       "oppgittAdresse": {
+        "tilleggsnavn": null,
         "gatenavn": "Waldemar Thranes gate",
-        "husnummer": "98",
+        "husnummerEtasjeLeilighet": "98",
         "region": null,
+        "postboks": null,
         "postnummer": "O175",
         "poststed": "Oslo",
         "landkode": "NO"
@@ -84,7 +88,10 @@
     "maritimtArbeid": [],
     "luftfartBaser": [],
     "soeknadsland": {
-      "landkoder": ["DK", "SE"]
+      "landkoder": [
+        "DK",
+        "SE"
+      ]
     },
     "periode": {
       "fom": "2018-01-02",
@@ -96,7 +103,10 @@
       "erFortsattAnsattEtterOppdraget": null,
       "erDrattPaaEgetInitiativ": null,
       "erErstatningTidligereUtsendte": null,
-      "samletUtsendingsperiode": { "fom": "2019-02-01", "tom": "2020-02-01" }
+      "samletUtsendingsperiode": {
+        "fom": "2019-02-01",
+        "tom": "2020-02-01"
+      }
     }
   },
   "type": "SØKNAD_A1_YRKESAKTIVE_EØS",
