--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-14.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-14.json5
@@ -21,9 +21,11 @@
       "fysiskeArbeidssteder": [
         {
           "adresse": {
+            "tilleggsnavn": null,
             "gatenavn": "Adresseveien 123",
-            "husnummer": "123",
+            "husnummerEtasjeLeilighet": "123",
             "region": "Brandenburger",
+            "postboks": null,
             "postnummer": "1234",
             "poststed": "Poststedet",
             "landkode": "DE",
@@ -41,9 +43,11 @@
         "orgnr": "372384726",
         "selvstendigNaeringsvirksomhet": true,
         "adresse": {
+          "tilleggsnavn": null,
           "gatenavn": "Deutschlandstrasse",
-          "husnummer": "123",
+          "husnummerEtasjeLeilighet": "123",
           "region": "Brandenburger",
+          "postboks": null,
           "postnummer": "3388",
           "poststed": "Berlin",
           "landkode": "DE"
@@ -51,7 +55,9 @@
       }
     ],
     "oppholdUtland": {
-      "oppholdslandkoder": ["DK"],
+      "oppholdslandkoder": [
+        "DK"
+      ],
       "oppholdsPeriode": {
         "fom": "2018-01-01",
         "tom": "2018-06-01"
@@ -64,8 +70,10 @@
       "intensjonOmRetur": true,
       "antallMaanederINorge": 8,
       "oppgittAdresse": {
+        "tilleggsnavn": null,
         "gatenavn": "Gateadressen",
-        "husnummer": "14B",
+        "husnummerEtasjeLeilighet": "14B",
+        "postboks": null,
         "region": "St.Hanshaugen Distrikt",
         "postnummer": "12345",
         "poststed": "Poststeder",
@@ -75,7 +83,10 @@
     "selvstendigArbeid": {
       "erSelvstendig": true,
       "selvstendigForetak": [
-        { "orgnr": "910253158", "fortsetterEtterArbeidIUtlandet": true }
+        {
+          "orgnr": "910253158",
+          "fortsetterEtterArbeidIUtlandet": true
+        }
       ]
     },
     "juridiskArbeidsgiverNorge": {
