--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-4.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-4.json5
@@ -21,9 +21,11 @@
       "fysiskeArbeidssteder": [
         {
           "adresse": {
+            "tilleggsnavn": null,
             "gatenavn": "Adresseveien 123",
-            "husnummer": "123",
+            "husnummerEtasjeLeilighet": "123",
             "region": "Brandenburger",
+            "postboks": null,
             "postnummer": "1234",
             "poststed": "Poststedet",
             "landkode": "DE",
@@ -41,9 +43,11 @@
         "orgnr": "372384726",
         "selvstendigNaeringsvirksomhet": true,
         "adresse": {
+          "tilleggsnavn": null,
           "gatenavn": "Deutschlandstrasse",
-          "husnummer": "123",
+          "husnummerEtasjeLeilighet": "123",
           "region": "Brandenburger",
+          "postboks": null,
           "postnummer": "3388",
           "poststed": "Berlin",
           "landkode": "DE"
@@ -51,7 +55,9 @@
       }
     ],
     "oppholdUtland": {
-      "oppholdslandkoder": ["DK"],
+      "oppholdslandkoder": [
+        "DK"
+      ],
       "oppholdsPeriode": {
         "fom": "2018-01-01",
         "tom": "2018-06-01"
@@ -64,9 +70,11 @@
       "intensjonOmRetur": true,
       "antallMaanederINorge": 8,
       "oppgittAdresse": {
+        "tilleggsnavn": null,
         "gatenavn": "Gateadressen",
-        "husnummer": "14B",
+        "husnummerEtasjeLeilighet": "14B",
         "region": "St.Hanshaugen Distrikt",
+        "postboks": null,
         "postnummer": "12345",
         "poststed": "Poststeder",
         "landkode": "DE"
@@ -75,7 +83,10 @@
     "selvstendigArbeid": {
       "erSelvstendig": true,
       "selvstendigForetak": [
-        { "orgnr": "910253158", "fortsetterEtterArbeidIUtlandet": true }
+        {
+          "orgnr": "910253158",
+          "fortsetterEtterArbeidIUtlandet": true
+        }
       ]
     },
     "juridiskArbeidsgiverNorge": {
@@ -137,7 +148,9 @@
       }
     ],
     "soeknadsland": {
-      "landkoder": ["DK"]
+      "landkoder": [
+        "DK"
+      ]
     },
     "periode": {
       "fom": "2018-01-02",
@@ -149,7 +162,10 @@
       "erFortsattAnsattEtterOppdraget": null,
       "erDrattPaaEgetInitiativ": null,
       "erErstatningTidligereUtsendte": null,
-      "samletUtsendingsperiode": { "fom": "2019-02-01", "tom": "2020-02-01" }
+      "samletUtsendingsperiode": {
+        "fom": "2019-02-01",
+        "tom": "2020-02-01"
+      }
     }
   },
   "type": "SØKNAD_A1_UTSENDTE_ARBEIDSTAKERE_EØS",
